add listing talks on home + youtube component + design

--- a/talks/2020-06-24_deployer-application-on-premise.mdx
+++ b/talks/2020-06-24_deployer-application-on-premise.mdx
@@ -1,7 +1,7 @@
 ---
 edition: 61
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/271061785/'
-title: 'Déployer une application on-premise dans une infrastructure bi-site'
+title: 'Déployer une application on-premise dans une infrastructure bi-site #61'
 description: "L'usage du cloud et des applications en SaaS nous abstrait le déploiement des applications dans nos infrastructures."
 speakers:
     - maxime-richard
@@ -19,4 +19,6 @@ Au programme :
 -   Analyse de la structure de l'application et identification des contraintes imposées par l'infrastructure
 -   Présentation des choix qui ont été faits et leurs conséquences.
 
-https://www.youtube.com/watch?v=6-dKqdELTPA
+Si vous souhaitez participer, n'hésitez pas à nous contacter :)
+
+<Youtube videoId="6-dKqdELTPA" title="⚡ Lightning talks" />
