--- a/talks/2020-07-29_ligtning-talks.mdx
+++ b/talks/2020-07-29_ligtning-talks.mdx
@@ -1,7 +1,7 @@
 ---
 edition: 62
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/271647092/'
-title: '⚡ Lightning talks'
+title: '⚡ Lightning talks #62'
 description: 'On se retrouve en Juillet pour une session de lightning talks !'
 speakers:
     - maxime-richard
@@ -14,4 +14,4 @@ Le principe est simple : Plusieurs speakers, chacun ayant 5 minutes pour présen
 
 Si vous souhaitez participer, n'hésitez pas à nous contacter :)
 
-https://www.youtube.com/watch?v=3zMJuVgzduU
+<Youtube videoId="3zMJuVgzduUA" title="⚡ Lightning talks" />
