--- a/talks/2020-07-29_ligtning-talks.mdx
+++ b/talks/2020-07-29_ligtning-talks.mdx
@@ -14,4 +14,4 @@ Le principe est simple : Plusieurs speakers, chacun ayant 5 minutes pour présen
 
 Si vous souhaitez participer, n'hésitez pas à nous contacter :)
 
-<Youtube videoId="3zMJuVgzduUA" title="⚡ Lightning talks" />
+<Youtube videoId="3zMJuVgzduU" title="⚡ Lightning talks" />
