add twitter annonce talk + previous/next talk WIP

--- a/talks/2020-07-29_ligtning-talks.mdx
+++ b/talks/2020-07-29_ligtning-talks.mdx
@@ -1,6 +1,7 @@
 ---
 edition: 62
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/271647092/'
+twitterLink: 'https://twitter.com/AperoWebNancy/status/1278337930285789185'
 title: '⚡ Lightning talks #62'
 description: 'On se retrouve en Juillet pour une session de lightning talks !'
 speakers:
