--- a/talks/2020-06-24_deployer-application-on-premise.mdx
+++ b/talks/2020-06-24_deployer-application-on-premise.mdx
@@ -1,6 +1,7 @@
 ---
 edition: 61
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/271061785/'
+twitterLink: 'https://twitter.com/AperoWebNancy/status/1268266424918818822'
 title: 'Déployer une application on-premise dans une infrastructure bi-site #61'
 description: "L'usage du cloud et des applications en SaaS nous abstrait le déploiement des applications dans nos infrastructures."
 speakers:
