improve all talks files

--- a/talks/2015-03-26_securite-web.mdx
+++ b/talks/2015-03-26_securite-web.mdx
@@ -1,13 +1,12 @@
 ---
 edition: 22
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/221050677/'
-title: "Apéro Web Nancy #22 : sécurité Web"
+title: 'Sécurité Web'
+description: '22ème édition des Apéros Web Nancy placée sous le signe de la sécurité Web.'
 ---
 
-22ème édition des Apéros Web Nancy placée sous le signe de la sécurité Web.
-
-Applications Web - Sécurité et Innovation
+## Applications Web - Sécurité et Innovation
 
 Dans cette présentation, nous ferons un point sur l'avancement des innovations par rapport à la sécurité Web. Nous verrons ensemble quels sont les enjeux de la sécurisation, quelques techniques utilisées par des internautes malveillants ainsi que les moyens utilisés pour se prémunir des attaques Web ciblant les nouvelles technologies, les entreprises, et les individus lambda.
 
-Par Thibaut Lombard (http://thibautlombard.cf/b/).
+Par [Thibaut Lombard](http://thibautlombard.cf/b/).
