--- a/talks/2017-02-28_react-native-a-framework-for-building-native-apps-learn-once-write-anywhe.mdx
+++ b/talks/2017-02-28_react-native-a-framework-for-building-native-apps-learn-once-write-anywhe.mdx
@@ -1,19 +1,20 @@
 ---
 edition: 44
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/237753513/'
-title: "React Native - \"A Framework for building native apps\" - Learn once, write anywhe"
+title: 'React Native - "A Framework for building native apps" - Learn once, write anywhe'
+description: 'Découverte de React Native.'
 ---
 
 On se demande souvent quelle solution mobile hybride choisir quand on démarre un projet, nous vous parlerons aujourd'hui de React Native.
 
 Au programme :
 
-- Pitch (Qu'est-ce que React Native ? Quelles sont ses possibilités et peut-on l'utiliser en prod ? etc..)
+-   Pitch (Qu'est-ce que React Native ? Quelles sont ses possibilités et peut-on l'utiliser en prod ? etc..)
 
-- Démonstration à travers la présentation d'une application mobile : Dashboard Epitech
+-   Démonstration à travers la présentation d'une application mobile : Dashboard Epitech
 
-- Live Coding
+-   Live Coding
 
-- Questions & réponses
+-   Questions & réponses
 
-Une conférence proposée par Jules Dupont (@julesdupont3 (https://twitter.com/julesdupont3)) et Flavian Desverne (@FlavianDesverne (https://twitter.com/FlavianDesverne))
+Une conférence proposée par [Jules Dupont](https://twitter.com/julesdupont3) et [Flavian Desverne](https://twitter.com/FlavianDesverne)
