--- a/talks/2017-03-30_admin-on-rest-construisez-un-bo-oriente-metier-avec-reactjs-et-material-ui.mdx
+++ b/talks/2017-03-30_admin-on-rest-construisez-un-bo-oriente-metier-avec-reactjs-et-material-ui.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 45
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/238434031/'
-title: "admin-on-rest : Construisez un BO orienté métier avec React.js et material-ui"
+title: 'admin-on-rest : Construisez un BO orienté métier avec React.js et material-ui'
+description: 'Découverte de admin-on-rest.'
 ---
 
 Les back-offices (aussi appelés admins), tous les clients en veulent, mais sans vouloir payer pour.
@@ -10,4 +11,4 @@ Et quand ils se retrouvent avec un phpMyAdmin, ils font la tête.
 
 Avec les outils d'aujourd'hui (React.js, material-ui), on peut développer une admin orientée métier de qualité, mais ça coûte cher... à moins d'utiliser un générateur d'admin.
 
-C'est l'objet d'admin-on-rest, un projet open-source développé par Marmelab, que François Zaninoto vous présentera (@francoisz).
+C'est l'objet d'admin-on-rest, un projet open-source développé par Marmelab, que [François Zaninotto](https://twitter.com/francoisz) vous présentera.
