--- a/talks/2017-07-19_itmprovise-a-fond.mdx
+++ b/talks/2017-07-19_itmprovise-a-fond.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 49
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/241544641/'
-title: "ITmprovise à fond"
+title: 'ITmprovise à fond'
+description: 'On remet ça!'
 ---
 
 On remet ça!
