--- a/talks/2017-09-13_jest-bibliotheque-de-tests-unitaires-js-proposant-des-mocks-automatiques.mdx
+++ b/talks/2017-09-13_jest-bibliotheque-de-tests-unitaires-js-proposant-des-mocks-automatiques.mdx
@@ -1,15 +1,14 @@
 ---
 edition: 51
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/243149403/'
-title: "Jest : bibliothèque de Tests Unitaires JS proposant des mocks automatiques"
+title: 'Jest : bibliothèque de Tests Unitaires JS proposant des mocks automatiques'
+description: "Jonathan Petitcolas qui nous fera l'honneur de venir partager ses connaissances sur Jest."
 ---
 
 Vous aviez cru qu'on vous avait oubliés ? Que nenni, on reprend les choses sérieuses après les deux apéros web de la période estivale !
 
-Pour entamer la nouvelle année de conférences / débats, c'est le talentueux Jonathan Petitcolas qui nous fera l'honneur de venir partager ses connaissances sur Jest.
+Pour entamer la nouvelle année de conférences / débats, c'est le talentueux Jonathan Petitcolas qui nous fera l'honneur de venir partager ses connaissances sur [Jest](https://github.com/facebook/jest).
 
-Jest est la solution recommandée pour tester une application React. Aucune configuration, mocks automatiques, rapidité d'exécution, confort de développement... Promesses marketing ou réalité quotidienne ? Pour le savoir, développons ensemble une application React de base, et testons Jest en conditions réelles.
-
-https://github.com/facebook/jest
+[Jest](https://github.com/facebook/jest) est la solution recommandée pour tester une application React. Aucune configuration, mocks automatiques, rapidité d'exécution, confort de développement... Promesses marketing ou réalité quotidienne ? Pour le savoir, développons ensemble une application React de base, et testons Jest en conditions réelles.
 
 Venez nombreux !
