--- a/talks/2017-11-22_les-tests-dacceptance-dans-un-projet-php-par-la-pratique.mdx
+++ b/talks/2017-11-22_les-tests-dacceptance-dans-un-projet-php-par-la-pratique.mdx
@@ -2,11 +2,12 @@
 edition: 53
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/245074462/'
 title: "Les tests d'acceptance dans un projet PHP par la pratique"
+description: 'Les tests sont la promesse de productivité et de qualité.'
 ---
 
 A l'occasion de ce nouvel apéro web, Vincent Simonin ( Responsable technique chez OpCoding ) viendra nous parler des tests d'acceptance dans un projet PHP.
 
-"Les tests sont la promesse de productivité et de qualité.
+> Les tests sont la promesse de productivité et de qualité.
 
 Mais souvent mal compris, et considérés comme coûteux, ils ne sont que rarement mis en oeuvre. OpCoding propose de présenter par la pratique, l'intérêt des tests d'acceptance.
 
