--- a/talks/2017-12-20_presentation-de-loopback-3.mdx
+++ b/talks/2017-12-20_presentation-de-loopback-3.mdx
@@ -1,21 +1,22 @@
 ---
 edition: 54
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/245752248/'
-title: "Présentation de loopback 3"
+title: 'Présentation de loopback 3'
+description: 'un framework open source node.js qui permet de créer des API REST avec très peu de code.'
 ---
 
 Pour ce nouvel apéro web, rejoignez nous pour assister à cette présentation de loopback 3, un framework open source node.js qui permet de créer des API REST avec très peu de code ( voir pas du tout ).
 
-- Accès facilité à des datasources: Oracle, MySQL, PostgreSQL, MS SQL Server, MongoDB, SOAP
+-   Accès facilité à des datasources: Oracle, MySQL, PostgreSQL, MS SQL Server, MongoDB, SOAP
 
-- Gestion des relations entre entités
+-   Gestion des relations entre entités
 
-- Gestion des ACL
+-   Gestion des ACL
 
-- Explorable avec swagger
+-   Explorable avec swagger
 
-- Modulable à souhait
+-   Modulable à souhait
 
-- ...
+-   ...
 
 Présenté par Yannick DOMENJOUD, consultant chez 6TECH
