--- a/talks/2018-01-24_typage-statique-typage-dynamique-et-tutti-quanti-.mdx
+++ b/talks/2018-01-24_typage-statique-typage-dynamique-et-tutti-quanti-.mdx
@@ -1,15 +1,16 @@
 ---
 edition: 55
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/246905261/'
-title: "Typage statique, typage dynamique et tutti quanti !"
+title: 'Typage statique, typage dynamique et tutti quanti !'
+description: 'Le typage ressemble beaucoup à une guerre de religion.'
 ---
 
-Pour ce premier apéro web de l'année,
-Valentin Manceaux-Panot viens nous parler de typage, en long, en large, et en travers !
+Pour ce premier apéro web de l'année, Valentin Manceaux-Panot viens nous parler de typage, en long, en large, et en travers !
 
 Au programme :
-"Le typage ressemble beaucoup à une guerre de religion : Tout le monde a sa propre opinion sur le sujet, et personne n'écoute celle des autres. Ce soir, je vous propose d'écouter mon opinion, et pourquoi j'ai raison.
 
-Je parlerai typage dynamique, typage statique, et quelles peuvent être les avantages de l'un par rapport à l'autre. Attention, cette présentation sera fortement dogmatique :D"
+> Le typage ressemble beaucoup à une guerre de religion : Tout le monde a sa propre opinion sur le sujet, et personne n'écoute celle des autres. Ce soir, je vous propose d'écouter mon opinion, et pourquoi j'ai raison.
+>
+> Je parlerai typage dynamique, typage statique, et quelles peuvent être les avantages de l'un par rapport à l'autre. Attention, cette présentation sera fortement dogmatique :D
 
 Rejoignez nous pour un apéro qui promet d'être fort en débats et discussions :)
