--- a/talks/2018-03-21_vuejs-un-framework-evolutif-.mdx
+++ b/talks/2018-03-21_vuejs-un-framework-evolutif-.mdx
@@ -1,12 +1,14 @@
 ---
 edition: 57
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/248339827/'
-title: "Vue.js, un framework évolutif !"
+title: 'Vue.js, un framework évolutif !'
+description: 'Facile à apprendre et à intégrer dans ses applications, il s’adapte à tous les niveaux et à tous les projets.'
 ---
 
 En mars, il n'y pas que la Saint Patrick, il y aussi l'apéro web Nancéien mensuel !
 
 Ce mois-ci, Guillaume & Mathieu viennent nous parler de Vue.js :
-"Vue.js se définit comme un framework évolutif et c’est vrai dans tous les sens du terme. Facile à apprendre et à intégrer dans ses applications, il s’adapte à tous les niveaux et à tous les projets, du side-project sans prétention à l’application robuste et bien testée d’une grande entreprise. Cette évolutivité n’est pas étrangère à sa fulgurante ascension et nous allons voir pourquoi ce framework pourrait bien être juste ce qu’il vous faut..."
+
+> Vue.js se définit comme un framework évolutif et c’est vrai dans tous les sens du terme. Facile à apprendre et à intégrer dans ses applications, il s’adapte à tous les niveaux et à tous les projets, du side-project sans prétention à l’application robuste et bien testée d’une grande entreprise. Cette évolutivité n’est pas étrangère à sa fulgurante ascension et nous allons voir pourquoi ce framework pourrait bien être juste ce qu’il vous faut...
 
 Un apéro web qui risque de vous en mettre plein la Vue ( ok je sors :) )
