--- a/talks/2018-06-27_apero-t-rex.mdx
+++ b/talks/2018-06-27_apero-t-rex.mdx
@@ -1,9 +1,12 @@
 ---
 edition: 60
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/251896522/'
-title: "Apéro T-Rex"
+title: 'Apéro T-Rex'
+description: 'Pour échanger tous ensemble sur les apéro web Nancy et ce que vous attendez de nos meetup pour la suite.'
 ---
 
 Jurassic park a son "T-Rex". Vu que le thé c'est pas la politique de la maison, on t'invite à participer au "Beer-Rex" de l'apéro web du mois de juin.
-Un apéro participatif comme tu les aimes ! Pour échanger tous ensemble sur les apéro web Nancy et ce que vous attendez de nos meetup pour la suite.
+Un apéro participatif comme tu les aimes !
+
+Pour échanger tous ensemble sur les apéro web Nancy et ce que vous attendez de nos meetup pour la suite.
 Quelles sont vos envies en terme de technos abordées ? Sous quel format (conférence / débats) ? On vous attend de pied ferme pour en débattre :)
