--- a/talks/2018-07-25_it-improvise-a-fond-volume-2.mdx
+++ b/talks/2018-07-25_it-improvise-a-fond-volume-2.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 61
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/252969713/'
-title: "IT improvise à fond"
+title: 'IT improvise à fond Volume 2'
+description: 'On remet ça!'
 ---
 
 On remet ça!
