--- a/talks/2018-08-29_cest-les-vacances-.mdx
+++ b/talks/2018-08-29_cest-les-vacances-.mdx
@@ -2,6 +2,7 @@
 edition: 62
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/253975193/'
 title: "C'est les vacances ! "
+description: "Fin août, c'est encore les vacances pour certain!"
 ---
 
 Fin août, c'est encore les vacances pour certain!
