--- a/talks/2018-11-14_un-magasin-sans-vendeur-inenvisageable-sur-votre-site-e-commerce-non-plus-.mdx
+++ b/talks/2018-11-14_un-magasin-sans-vendeur-inenvisageable-sur-votre-site-e-commerce-non-plus-.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 64
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/256181707/'
-title: "Un magasin sans vendeur ? Inenvisageable... sur votre site e-commerce non plus !"
+title: 'Un magasin sans vendeur ? Inenvisageable... sur votre site e-commerce non plus !'
+description: "Inenvisageable, n'est-ce-pas ? Pourtant, en ligne, c'est souvent le cas."
 ---
 
 Imaginez... vous êtes en ville, vous faites des courses. Vous entrez chez un sommelier, car vous voulez une bonne bouteille de vin pour agrémenter ce repas que vous préparez depuis un moment !
@@ -14,4 +15,4 @@ Sailendra, experte en marketing prédictif, édite Sailsense, l'accélérateur d
 
 On vous propose d'aborder les nouvelles stratégies webmarketing ainsi qu'un point technique, ponctué par une approche du monde de l'intelligence artificielle.
 
-Une conférence présentée par Elias Ohayon, Directeur des opérations chez Sailendra (@Elias_Ohayon)
+Une conférence présentée par [Elias Ohayon](https://twitter.com/Elias_Ohayon), Directeur des opérations chez Sailendra.
