--- a/talks/2019-04-24_aws-et-serverless-trop-facile-reporte-au-2404.mdx
+++ b/talks/2019-04-24_aws-et-serverless-trop-facile-reporte-au-2404.mdx
@@ -1,15 +1,14 @@
 ---
 edition: 67
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/259727702/'
-title: "Apéro Web Nancy #67: AWS et serverless ? Trop facile !* (reporté au 24/04)"
+title: 'AWS et serverless ? Trop facile !'
+description: 'AWS, serverless, devops... Une liste de buzzwords assurant à elle seule un bon référencement de cet événement.'
 ---
 
-Ce mois ci, c'est Jonathan Petitcolas (https://twitter.com/Sethpolma) qui s'y colle!
+Ce mois ci, c'est [Jonathan Petitcolas](https://twitter.com/Sethpolma) qui s'y colle!
 
 AWS, serverless, devops... Une liste de buzzwords assurant à elle seule un bon référencement de cet événement. Mais qu'en est-il réellement ? Avez-vous déjà ouvert la console AWS ? Avez-vous abandonné suite à la kyrielle de services existants ? Si oui, cette conf est faîte pour vous.
 
 Durant ce talk, nous allons aborder un cas concret : le déploiement d'une application statique privée sur un serveur S3 (pensez FTP), derrière une distribution CloudFront (pensez Nginx). De la germination de cette infrastructure chez Tint.ai à sa mise en place, cette conférence ne sera pas purement technique, mais sera l'occasion d'un réel retour d'expérience d'un débutant AWS qui a étudié la question pendant plusieurs mois.
 
 Venez nombreux ! ;)
-
-( * : après avoir vu cette conf )
