--- a/talks/2019-05-22_flutter-encore-un-framework-mobile.mdx
+++ b/talks/2019-05-22_flutter-encore-un-framework-mobile.mdx
@@ -1,11 +1,15 @@
 ---
 edition: 68
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/261458429/'
-title: "Flutter, encore un framework mobile ?"
+title: 'Flutter, encore un framework mobile ?'
+description: "En mai, on fait ce qu'il nous plait, et on espère que ça va vous plaire aussi !"
 ---
 
 En mai, on fait ce qu'il nous plait, et on espère que ça va vous plaire aussi !
+
 Guillaume Migeon viendra vous présenter le Framework Flutter qui permet de créer des applications Android et iOS.
+
 Sorti il y a 2 ans, est-il encore possible pour le framework de Google de s'imposer sur le marché cross-platform ?
 Que vaut-il en comparaison des autres Frameworks mobiles pour le développement d applications hybrides, tel ReactNative ?
-Des feedbacks, du code, et des bières, on vous attend nombreux
+
+Des feedbacks, du code, et des bières, on vous attend nombreux.
