--- a/talks/2019-06-26_chaos-engineering-chef-on-peut-tout-casser-.mdx
+++ b/talks/2019-06-26_chaos-engineering-chef-on-peut-tout-casser-.mdx
@@ -1,12 +1,13 @@
 ---
 edition: 69
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/262414756/'
-title: "Chaos Engineering. \"Chef, on peut tout casser\" ?!?!"
+title: 'Chaos Engineering. "Chef, on peut tout casser" ?!?!'
+description: 'Que se passerait-il si je lâchais mon gorille dans la salle serveur ?'
 ---
 
 Pour l'apéro web de ce mois de Juin, Sylvain Vaglica de Publicis.Sapient viendra nous parler de 🤘 Chaos Engineering 🤘
 
-"Que se passerait-il si je lâchais mon gorille dans la salle serveur ?"
+> Que se passerait-il si je lâchais mon gorille dans la salle serveur ?
 
 Eh oui, c'est bien cette idée saugrenue qui est à l'origine du paradigme nommé "Chaos Engineering".
 Ce terme barbare désigne une pratique émergente consistant à malmener ses propres infrastructures informatiques afin de tester leur robustesse en conditions réelles.
