--- a/talks/2019-07-31_it-improvise-a-fond-volume-3.mdx
+++ b/talks/2019-07-31_it-improvise-a-fond-volume-3.mdx
@@ -1,12 +1,13 @@
 ---
 edition: 70
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/263194026/'
-title: "IT improvise à fond. Volume 3"
+title: 'IT improvise à fond. Volume 3'
+description: 'On remet ça!'
 ---
 
 Pour finir le mois de juillet, on remet un peu d'impro en présentation au programme :)
 
-Comme chaque année en juillet, on vous propose un meetup inspiré des Ignite Talk ( https://fr.wikipedia.org/wiki/Ignite ).
+Comme chaque année en juillet, on vous propose un meetup inspiré des Ignite Talk (https://fr.wikipedia.org/wiki/Ignite).
 
 Le pitch: 5 slides visuels / 2 minutes de présentation à improviser en découvrant les slides en même temps que votre auditoire!
 
