--- a/talks/2020-05-27_typescript-le-nouvel-eldorado-du-developpement-web.mdx
+++ b/talks/2020-05-27_typescript-le-nouvel-eldorado-du-developpement-web.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 77
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/270620304/'
-title: "🚀 Typescript, le nouvel eldorado du développement web ? 🚀"
+title: '🚀 Typescript, le nouvel eldorado du développement web ? 🚀'
+description: 'Initiation à un nouveau langage qui prend de plus en plus d’ampleur'
 ---
 
 Delia Solutions vous propose une conférence en ligne 💻, animée par Corentin, Benjamin et Jérémy pour vous initier à un nouveau langage qui prend de plus en plus d’ampleur. ⚙️
@@ -18,6 +19,4 @@ Un langage de programmation moderne et fiable est essentiel pour un développeur
 
 Découvrez dans ce live les dernières innovations pour mieux vous accompagner dans la création d’application web structurée et ainsi booster votre activité.📈
 
-La conférence durera 30 minutes et sera disponible sur Youtube ▶️. Vous aurez l’occasion de nous poser toutes vos questions et nous répondrons à un maximum d’entre elles. 🤝
-
-On vous attend nombreux pour échanger et interagir lors de ce moment convivial ! 🗣
+<Youtube videoId="oGzXb4tO8G0" title="Typescript, le nouvel el dorado du développement web ? 🚀" />
