--- a/talks/2020-06-24_deployer-application-on-premise.mdx
+++ b/talks/2020-06-24_deployer-application-on-premise.mdx
@@ -1,10 +1,8 @@
 ---
 edition: 61
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/271061785/'
-title: 'Déployer une application on-premise dans une infrastructure bi-site #61'
+title: 'Déployer une application on-premise dans une infrastructure bi-site'
 description: "L'usage du cloud et des applications en SaaS nous abstrait le déploiement des applications dans nos infrastructures."
-speakers:
-    - maxime-richard
 ---
 
 L'usage du cloud et des applications en SaaS nous abstrait le déploiement des applications dans nos infrastructures.
@@ -21,4 +19,7 @@ Au programme :
 
 Si vous souhaitez participer, n'hésitez pas à nous contacter :)
 
-<Youtube videoId="6-dKqdELTPA" title="⚡ Lightning talks" />
+<Youtube
+    videoId="6-dKqdELTPA"
+    title="Déployer une application on-premise dans une infrastructure bi-site"
+/>
