--- a/talks/2015-07-23_improgramming.mdx
+++ b/talks/2015-07-23_improgramming.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 26
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/223967783/'
-title: "Apéro Web Nancy #26 : ImProGramming"
+title: 'ImProGramming'
+description: 'Improvisation collaborative entre tous les spectacteurs'
 ---
 
 Cette 26ème édition des Apéros Web Nancy se veut participative. Elle consistera en une improvisation collaborative entre tous les spectacteurs. Pendant deux minutes, chacun devra présenter quelques slides dont il prendra connaissance en live. Challenge accepted? :)
