--- a/talks/2016-07-28_apero-web-nancy-38.mdx
+++ b/talks/2016-07-28_apero-web-nancy-38.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 38
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/232806051/'
-title: "Apéro Web Nancy #38"
+title: 'Apéro Web Nancy'
+description: 'Pas de talk cette fois-ci.'
 ---
 
 Retrouvons-nous jeudi 28 pour parler technique autour d'un verre !
