--- a/talks/2017-01-31_tests-end-to-end.mdx
+++ b/talks/2017-01-31_tests-end-to-end.mdx
@@ -1,7 +1,8 @@
 ---
 edition: 43
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/237215287/'
-title: "Apéro Web Nancy #43 : tests end-to-end"
+title: 'Tests end-to-end'
+description: "Retour d'expérience sur les tests end-to-end."
 ---
 
 Vous êtes en train de développer une application web qui est utilisée en production par de nombreux utilisateurs. Vous voulez effectuer "une toute petite modification" sur une partie de l’application.
@@ -10,4 +11,4 @@ Et là, c’est le drame. Vous commencez à recevoir des coups de téléphone ca
 
 Il existe des solutions permettant d’être plus serein et de mieux dormir la nuit pour éviter ce genre de soucis. Je vais vous présenter quelques outils que j’ai pu essayer et qui vont dans ce sens.
 
-Par Cédric Villa (https://twitter.com/zestprod).
+Par [Cédric Villa](https://twitter.com/zestprod).
