--- a/talks/2017-05-24_fuc-standards-ou-comment-coder-proprement.mdx
+++ b/talks/2017-05-24_fuc-standards-ou-comment-coder-proprement.mdx
@@ -1,21 +1,20 @@
 ---
 edition: 47
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/239675218/'
-title: "Fuc*** standards ! (Ou comment coder \"proprement\")"
+title: 'Fuc*** standards ! (Ou comment coder "proprement")'
+description: "Partager mon expérience et plus particulièrement mettre en lumière l'importance de la qualité du code"
 ---
 
 Fabien développe depuis plusieurs années ; fort d'un constat trop souvent partagé, à savoir une qualité de code médiocre rencontrée lors de la reprise de projets, il nous a proposé son REX :
 
-"A travers ce Meetup je souhaite partager mon expérience et plus particulièrement mettre en lumière l'importance de la qualité du code que vous produisez (en règle générale).
+> A travers ce Meetup je souhaite partager mon expérience et plus particulièrement mettre en lumière l'importance de la qualité du code que vous produisez (en règle générale).
+>
+> Le code parfait n'existe pas, néanmoins nous pouvons le rendre compréhensible de tous avec un peu de rigueur.
 
-Le code parfait n'existe pas, néanmoins nous pouvons le rendre compréhensible de tous avec un peu de rigueur.
+> Lors de cette conférence, je vais vous détailler les bonnes et les mauvaises pratiques de code, quelque soit le langage, notamment à travers de nombreux exemples rencontrés dans le milieu professionnel.
 
-Lors de cette conférence, je vais vous détailler les bonnes et les mauvaises pratiques de code, quelque soit le langage, notamment à travers de nombreux exemples rencontrés dans le milieu professionnel.
-
-Enfin, je vous donne des outils et des solutions pour garantir le fonctionnement et la maintenabilité de votre application."
+> Enfin, je vous donne des outils et des solutions pour garantir le fonctionnement et la maintenabilité de votre application.
 
 Si vous avez des questions / préférences sur la conf :
-
-Organisation : https://twitter.com/AperoWebNancy
 
 Speaker : https://twitter.com/vaga_io
