add speaker to jamstack talk

--- a/talks/2019-11-27_generer-un-site-statique-moderne-et-rapide-avec-la-jamstack.mdx
+++ b/talks/2019-11-27_generer-un-site-statique-moderne-et-rapide-avec-la-jamstack.mdx
@@ -3,6 +3,8 @@ edition: 72
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/266254555/'
 title: 'Générer un site statique moderne et rapide avec la JAMstack'
 description: 'JAMstack décrire une façon de développer des sites statiques'
+speakers:
+    - hugo-torzuoli
 ---
 
 On revient en novembre, avec un Apéro Web qui va nous parler de la JAMstack !
