add some speakers

--- a/talks/2015-01-29_generateurs-javascript-oauth-2.mdx
+++ b/talks/2015-01-29_generateurs-javascript-oauth-2.mdx
@@ -3,6 +3,8 @@ edition: 20
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/219778846/'
 title: 'Générateurs Javascript / OAuth 2'
 description: 'Deux talks du soir par Thiery et Kévin'
+speakers:
+    - kevin-maschtaler
 ---
 
 Les deux talks du soir, générateurs Javascript et OAuth 2.0 :
