--- a/talks/2015-02-26_go-et-meteor.mdx
+++ b/talks/2015-02-26_go-et-meteor.mdx
@@ -3,6 +3,8 @@ edition: 21
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/220435631/'
 title: 'Go et Meteor'
 description: 'Deux talks du soir par Emmanuel et Florian'
+speakers:
+    - florian-ferbach
 ---
 
 Deux talks au programme de cette 21ème édition :
