--- a/talks/2015-08-26_creation-dun-pong-avec-unity.mdx
+++ b/talks/2015-08-26_creation-dun-pong-avec-unity.mdx
@@ -3,6 +3,8 @@ edition: 27
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/224759134/'
 title: "Création d'un Pong avec Unity"
 description: "Un retour d'expérience lié à sa découverte récente de Unity"
+speakers:
+    - jonathan-petitcolas
 ---
 
 [Jonathan Petitcolas](http://www.jonathan-petitcolas.com) profitera de cet apéro pour nous faire un retour d'expérience lié à sa découverte récente de [Unity](https://unity3d.com), la célèbre plate-forme de developpement de jeux.
