--- a/talks/2015-12-16_webpack.mdx
+++ b/talks/2015-12-16_webpack.mdx
@@ -3,6 +3,8 @@ edition: 31
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/227356266/'
 title: 'Webpack'
 description: 'Découverte de Webpack'
+speakers:
+    - jonathan-petitcolas
 ---
 
 Partons ensemble à la découverte de [Webpack](https://webpack.js.org/), un bundler universel permettant de gérer tous les assets de vos projets : Javascript bien entendu, mais également fichiers CSS, SASS, LESS, PNG, CSV, WTF, PDF, etc...
