--- a/talks/2016-06-29_le-jeu-video-a-la-rescousse-du-web-.mdx
+++ b/talks/2016-06-29_le-jeu-video-a-la-rescousse-du-web-.mdx
@@ -3,6 +3,8 @@ edition: 37
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/232075517/'
 title: 'Le jeu vidéo à la rescousse du Web !'
 description: 'Une conférence sans code, mais avec des dessins. Et des idées pour demain.'
+speakers:
+    - francois-zaninotto
 ---
 
 En client-serveur traditionnel, chaque action de l'utilisateur induit un recalcul de toute la page côté serveur, puis le transport du HTML vers le navigateur. PHP et ses frameworks MVC sont conçus pour gérer cette architecture. Mais quand AJAX et HTML5 viennent bouleverser la répartition de ce qui se fait côté client et côté serveur, il est temps de repenser nos outils.
