--- a/talks/2016-09-27_les-secrets-de-npm.mdx
+++ b/talks/2016-09-27_les-secrets-de-npm.mdx
@@ -3,6 +3,8 @@ edition: 39
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/234293511/'
 title: 'Les secrets de npm'
 description: 'Venez découvrir comment développer tout le potentiel derrière ces trois petites lettres.'
+speakers:
+    - jonathan-petitcolas
 ---
 
 Attention : changement de lieu suite à la fermeture définitive du Classico. Rendez-vous dorénavant à la Rhumerie "La Plantation".
