--- a/talks/2017-03-30_admin-on-rest-construisez-un-bo-oriente-metier-avec-reactjs-et-material-ui.mdx
+++ b/talks/2017-03-30_admin-on-rest-construisez-un-bo-oriente-metier-avec-reactjs-et-material-ui.mdx
@@ -3,6 +3,8 @@ edition: 45
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/238434031/'
 title: 'admin-on-rest : Construisez un BO orienté métier avec React.js et material-ui'
 description: 'Découverte de admin-on-rest.'
+speakers:
+    - francois-zaninotto
 ---
 
 Les back-offices (aussi appelés admins), tous les clients en veulent, mais sans vouloir payer pour.
