--- a/talks/2017-09-13_jest-bibliotheque-de-tests-unitaires-js-proposant-des-mocks-automatiques.mdx
+++ b/talks/2017-09-13_jest-bibliotheque-de-tests-unitaires-js-proposant-des-mocks-automatiques.mdx
@@ -3,6 +3,8 @@ edition: 51
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/243149403/'
 title: 'Jest : bibliothèque de Tests Unitaires JS proposant des mocks automatiques'
 description: "Jonathan Petitcolas qui nous fera l'honneur de venir partager ses connaissances sur Jest."
+speakers:
+    - jonathan-petitcolas
 ---
 
 Vous aviez cru qu'on vous avait oubliés ? Que nenni, on reprend les choses sérieuses après les deux apéros web de la période estivale !
