--- a/talks/2018-02-22_graphql-lavenir-du-rest.mdx
+++ b/talks/2018-02-22_graphql-lavenir-du-rest.mdx
@@ -3,6 +3,8 @@ edition: 56
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/247798599/'
 title: "GraphQL, l'avenir du REST"
 description: 'Venez découvrir en détail le principe, la mise en oeuvre et l’écosystème de GraphQL.'
+speakers:
+    - francois-zaninotto
 ---
 
 REST est devenu un standard pour les APIs web.
