--- a/talks/2018-04-25_10-raisons-pour-lesquelles-vos-confs-sont-nulles-et-comment-y-remedier.mdx
+++ b/talks/2018-04-25_10-raisons-pour-lesquelles-vos-confs-sont-nulles-et-comment-y-remedier.mdx
@@ -3,6 +3,8 @@ edition: 58
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/249491076/'
 title: '10 raisons pour lesquelles vos confs sont nulles... et comment y remédier.'
 description: 'Jonathan Petitcolas viendra partager avec nous son expérience sur cet exercice de style.'
+speakers:
+    - jonathan-petitcolas
 ---
 
 Ce mois ci, pas de technique pure et dure au programme, mais des conseils pour vos présentations.
