--- a/talks/2018-09-26_8-facons-de-rejeter-la-faute-sur-lautre-equipe.mdx
+++ b/talks/2018-09-26_8-facons-de-rejeter-la-faute-sur-lautre-equipe.mdx
@@ -3,6 +3,8 @@ edition: 63
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/254680009/'
 title: '8 façons de rejeter la faute sur l’autre équipe'
 description: 'Très souvent, développeurs et designers ne se comprennent pas.'
+speakers:
+    - jonathan-petitcolas
 ---
 
 > Comment il veut qu'on intègre ça ? Et ça rend quoi sur mobile ? Et pourquoi on a 12 boutons différents pour la même action ?
