--- a/talks/2016-04-28_blockchains.mdx
+++ b/talks/2016-04-28_blockchains.mdx
@@ -3,6 +3,8 @@ edition: 35
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/230566259/'
 title: 'Blockchains'
 description: 'Découverte de la Blockchains'
+speakers:
+    - kevin-maschtaler
 ---
 
 On parle beaucoup des Blockchains, une des technologies piliers de Bitcoin... De nombreux experts estiment qu'il s'agit d'une révolution majeure, similaire à celle qu'Internet a provoqué. Mais que sont-elles réellement ? Et comment les utiliser ?
