--- a/talks/2019-04-24_aws-et-serverless-trop-facile-reporte-au-2404.mdx
+++ b/talks/2019-04-24_aws-et-serverless-trop-facile-reporte-au-2404.mdx
@@ -3,6 +3,8 @@ edition: 67
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/259727702/'
 title: 'AWS et serverless ? Trop facile !'
 description: 'AWS, serverless, devops... Une liste de buzzwords assurant à elle seule un bon référencement de cet événement.'
+speakers:
+    - jonathan-petitcolas
 ---
 
 Ce mois ci, c'est [Jonathan Petitcolas](https://twitter.com/Sethpolma) qui s'y colle!
