--- a/talks/2015-01-29_generateurs-javascript-oauth-2.mdx
+++ b/talks/2015-01-29_generateurs-javascript-oauth-2.mdx
@@ -5,6 +5,7 @@ title: 'Générateurs Javascript / OAuth 2'
 description: 'Deux talks du soir par Thiery et Kévin'
 speakers:
     - kevin-maschtaler
+    - thiery-michel
 ---
 
 Les deux talks du soir, générateurs Javascript et OAuth 2.0 :
