add Fabien Casters speaker

--- a/talks/2017-05-24_fuc-standards-ou-comment-coder-proprement.mdx
+++ b/talks/2017-05-24_fuc-standards-ou-comment-coder-proprement.mdx
@@ -3,6 +3,8 @@ edition: 47
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/239675218/'
 title: 'Fuc*** standards ! (Ou comment coder "proprement")'
 description: "Partager mon expérience et plus particulièrement mettre en lumière l'importance de la qualité du code"
+speakers:
+    - fabien-casters
 ---
 
 Fabien développe depuis plusieurs années ; fort d'un constat trop souvent partagé, à savoir une qualité de code médiocre rencontrée lors de la reprise de projets, il nous a proposé son REX :
