--- a/talks/2020-10-28_comment-creer-une-application-moderne-sur-le-cloud.mdx
+++ b/talks/2020-10-28_comment-creer-une-application-moderne-sur-le-cloud.mdx
@@ -8,3 +8,5 @@ speakers:
 ---
 
 Le mobile est devenu le principal vecteur d'engagement des utilisateurs, d'où la nécessité pour les développeurs de fournir des applications dont l'expérience utilisateur, les performances et l'échelle sont irréprochables. Durant cette session, Marc nous présentera des services comme AWS Amplify, AWS AppSync ou AWS lambda qui vont vous permettre de développer, publier et exploiter nos backends d'applications sur le cloud.
+
+<Youtube videoId="MU3eS-vAri8" title="Comment créer une application moderne sur le cloud" />
