Add Mathieu Desnouveaux speaker

--- a/talks/2020-01-29_comment-faire-une-refonte-dune-fonctionnalite-ultra-critique.mdx
+++ b/talks/2020-01-29_comment-faire-une-refonte-dune-fonctionnalite-ultra-critique.mdx
@@ -3,6 +3,8 @@ edition: 74
 meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/267746190/'
 title: "Comment faire une refonte d'une fonctionnalité ultra critique ?"
 description: 'La migration de la brique de virement de Boursorama en 2019'
+speakers:
+    - mathieu-desnouveaux
 ---
 
 On est de retour pour la première présentation de l'année !
