--- a/speakers/mathieu-desnouveaux.mdx
+++ b/speakers/mathieu-desnouveaux.mdx
@@ -1,7 +1,7 @@
 ---
 firstName: 'Mathieu'
 lastName: 'Desnouveaux'
-resume: 'Mostly PHP Developer'
+resume: 'Mostly PHP Developer, Sketchnoter'
 picture: 'mathieu-desnouveaux.jpg'
 links:
     - title: twitter
@@ -10,4 +10,4 @@ links:
       url: https://www.linkedin.com/in/mdesnouveaux
 ---
 
-Développeur PHP depuis trop longtemps, je fais également du sketchnoting que je partage sur twitter. Je prend, par exemple, les Apéro Web comme sujet.
+Développeur PHP depuis trop longtemps, je réalise également des sketchnotes que je partage sur twitter. Je prends, par exemple, les Apéro Web comme sujet.
