--- a/speakers/mathieu-desnouveaux.mdx
+++ b/speakers/mathieu-desnouveaux.mdx
@@ -2,7 +2,7 @@
 firstName: 'Mathieu'
 lastName: 'Desnouveaux'
 resume: 'Mostly PHP Developer, Sketchnoter'
-picture: 'mathieu-desnouveaux.jpg'
+picture: 'mathieu-desnouveaux.png'
 links:
     - title: twitter
       url: https://twitter.com/mdesnouveaux
