--- a/talks/2020-11-25_comment-arte-a-simplifie-le-developpement-multi-platforme.mdx
+++ b/talks/2020-11-25_comment-arte-a-simplifie-le-developpement-multi-platforme.mdx
@@ -1,6 +1,6 @@
 ---
 edition: 82
-meetupLink: 'https://www.meetup.com/Aperos-Web-Nancy/events/273923616'
+meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/274389978'
 title: 'Comment ARTE a simplifié le développement multi-plateforme'
 description: 'Comment ARTE a simplifié le développement multi-plateforme à l’aide d’une API orientée front'
 speakers:
@@ -14,3 +14,5 @@ Cette diversité applicative nous a poussé à passer d’une API orientée mét
 Avec ce retour d’expérience, nous expliquerons comment nous avons simplifié le développement des applications en ré-équilibrant leur responsabilité et celle de l’API mais aussi en travaillant la structure des données pour les besoins parfois spécifiques des différents supports.
 
 Nous reviendrons aussi sur les choix techniques (parfois à contre-courant) qui ont été faits lors du développement.
+
+<Youtube videoId="3pXeIusZo64" title="Comment ARTE a simplifié le développement multi-plateforme" />
