--- a/speakers/lucas-legname.mdx
+++ b/speakers/lucas-legname.mdx
@@ -2,10 +2,12 @@
 firstName: 'Lucas'
 lastName: 'Legname'
 resume: 'Responsable développement Arte.tv'
-picture: 'lucas-legname.jpeg'
+picture: 'lucas-legname.jpg'
 links:
     - title: twitter
       url: https://twitter.com/lucaslegname
+    - title: github
+      url: https://github.com/lucaslegname
 ---
 
 Lucas Legname est responsable du développement de l'application [ARTE.tv](https://www.arte.tv/) sur les plateformes iOS, Android, tvOS et Android TV. Ancien développeur back-end, il coordonne aujourd'hui l'évolution de l'app de replay d'ARTE en travaillant étroitement avec les développeurs front-end mais aussi en participant à l'amélioration des APIs et à la résolution des problématiques multi-plateformes.
