Add slide on arte talk

--- a/talks/2020-11-25_comment-arte-a-simplifie-le-developpement-multi-platforme.mdx
+++ b/talks/2020-11-25_comment-arte-a-simplifie-le-developpement-multi-platforme.mdx
@@ -16,3 +16,13 @@ Avec ce retour d’expérience, nous expliquerons comment nous avons simplifié 
 Nous reviendrons aussi sur les choix techniques (parfois à contre-courant) qui ont été faits lors du développement.
 
 <Youtube videoId="3pXeIusZo64" title="Comment ARTE a simplifié le développement multi-plateforme" />
+
+Pour en savoir plus:
+
+-   ARTE’s API strategy & architecture: https://www.youtube.com/watch?v=bsCOU7131lM
+-   6play_API-v2-Final(1).doc: https://www.youtube.com/watch?v=Y_umU8mTWho
+-   BFFs and GraphQL: https://www.youtube.com/watch?v=B5OdK21ZevI
+-   ARTE: https://arte.tv/
+-   Marmelab: https://marmelab.com/
+
+Les slides: https://artegeie.github.io/Presentation-Forum-PHP-2020/#/
