add meetup url + github page

--- a/speakers/jeoffrey-bauvin.mdx
+++ b/speakers/jeoffrey-bauvin.mdx
@@ -6,6 +6,8 @@ picture: 'jeoffrey-bauvin.jpeg'
 links:
     - title: twitter
       url: https://twitter.com/Jeoffreybauvin
+    - title: github
+        url: https://github.com/Jeoffreybauvin
 ---
 
 Architecte système chez [Boursorama](https://www.boursorama.com/).
