--- a/talks/2020-12-23_debuter-en-domotique-quelles-solutions-ajourdhui.mdx
+++ b/talks/2020-12-23_debuter-en-domotique-quelles-solutions-ajourdhui.mdx
@@ -1,6 +1,6 @@
 ---
 edition: 83
-meetupLink: ''
+meetupLink: 'https://www.meetup.com/fr-FR/Aperos-Web-Nancy/events/274941526/'
 title: "Débuter en domotique : quelles solutions aujourd'hui ?"
 description: "Parlons domotique en 2020, vers quelles solutions se tourner, qu'elles soient matérielles ou logicielles, et surtout, pour quel investissement temps/coût"
 speakers:
