add slide on talk

--- a/talks/2020-12-23_debuter-en-domotique-quelles-solutions-ajourdhui.mdx
+++ b/talks/2020-12-23_debuter-en-domotique-quelles-solutions-ajourdhui.mdx
@@ -15,3 +15,5 @@ Aujourd’hui, où en est-on ? Comment ne pas s’enfermer dans des solutions pr
 -   Présentation complète du trio Home Assistant, Node-Red et MQTT
 
 <Youtube videoId="nBaKmKRjNMs" title="Débuter en domotique : quelles solutions aujourd'hui ?" />
+
+Les slides: https://speakerdeck.com/jeoffreybauvin/debuter-en-domotique-quelles-solutions-en-2020
