added youtube link to talk 84

--- a/talks/2021-01-27_objet-et-fonctionnel-ou-lequel-est-mieux-que-l-autre.mdx
+++ b/talks/2021-01-27_objet-et-fonctionnel-ou-lequel-est-mieux-que-l-autre.mdx
@@ -10,3 +10,5 @@ speakers:
 Avec PHP, Java ou C#, beaucoup de développeurs apprennent le développement à travers la programmation orientée objet. Depuis longtemps la méthode incontestée de développer, cette hégémonie commence doucement à être remise en question à travers des langages et des frameworks cherchant de plus en plus à se détacher de ces concepts pourtant rodés.
 
 Pourquoi une telle domination de l'objet jusqu'ici ? Pourquoi le fonctionnel réapparaît-il maintenant ? Est-ce un effet de mode ou va-t-il rester ? Est-ce envisageable que la programmation objet disparaisse au profit de la programmation fonctionnelle ? Pour trouver des réponses à ces questions, et pour se poser encore plus de questions, ce sera le 27 janvier !
+
+<Youtube videoId="fR_L1BsFv8E" title="Objet et fonctionnel, ou lequel est mieux que l'autre ?" />
