add event sourcing slide

--- a/talks/2021-11-24_event-sourcing-made-easy.mdx
+++ b/talks/2021-11-24_event-sourcing-made-easy.mdx
@@ -17,3 +17,5 @@ Nous utilisons intensivement l'event sourcing chez Tint. Voici donc un retour d'
 -   Quels sont les quelques écueils identifiés lors de cette migration ?
 
 Venez nombreux !
+
+Les slides: https://docs.google.com/presentation/d/1DFBpqWSWoZ-ge06M-JID8TQ73haSvDXaAxaeRnj6_Pw/edit?usp=sharing
